@@ -1,11 +1,9 @@
 package com.kobe.warehouse.repository;
 
-import static java.util.Objects.isNull;
-import static java.util.Objects.nonNull;
-
 import com.kobe.warehouse.domain.Rayon;
 import com.kobe.warehouse.domain.Rayon_;
 import com.kobe.warehouse.domain.Storage_;
+import com.kobe.warehouse.domain.enumeration.StorageType;
 import com.kobe.warehouse.service.StorageService;
 import com.kobe.warehouse.service.dto.RayonDTO;
 import jakarta.persistence.EntityManager;
@@ -14,15 +12,18 @@ import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
+
+import java.util.ArrayList;
+import java.util.List;
+
+import static java.util.Objects.isNull;
+import static java.util.Objects.nonNull;
 
 @Repository
 @Transactional
@@ -40,46 +41,51 @@ public class CustomizedRayonRepository implements CustomizedRayonService {
 
     @Override
     @Transactional(readOnly = true)
-    public Page<RayonDTO> listRayonsByStorageId(Long storageId, String query, Pageable pageable) {
-        long total = findAllCount(storageId, query);
+    public Page<RayonDTO> listRayonsByStorageId(Long magasinId, Long storageId, String query, Pageable pageable) {
+        long total = findAllCount(magasinId, storageId, query);
         List<RayonDTO> list = new ArrayList<>();
         if (total > 0) {
             CriteriaBuilder cb = em.getCriteriaBuilder();
             CriteriaQuery<Rayon> cq = cb.createQuery(Rayon.class);
             Root<Rayon> root = cq.from(Rayon.class);
             cq.select(root).orderBy(cb.asc(root.get(Rayon_.libelle)));
-            List<Predicate> predicates = produitPredicate(cb, root, storageId, query);
+            List<Predicate> predicates = produitPredicate(cb, root, magasinId, storageId, query);
             cq.where(cb.and(predicates.toArray(new Predicate[0])));
             TypedQuery<Rayon> q = em.createQuery(cq);
             q.setFirstResult((int) pageable.getOffset());
             q.setMaxResults(pageable.getPageSize());
-            list = q.getResultList().stream().map(RayonDTO::new).collect(Collectors.toList());
+            list = q.getResultList().stream().map(RayonDTO::new).toList();
         }
         return new PageImpl<>(list, pageable, total);
     }
 
-    private long findAllCount(Long storageId, String query) {
+    private long findAllCount(Long magasinId, Long storageId, String query) {
         CriteriaBuilder cb = em.getCriteriaBuilder();
         CriteriaQuery<Long> cq = cb.createQuery(Long.class);
         Root<Rayon> root = cq.from(Rayon.class);
         cq.select(cb.count(root));
-        List<Predicate> predicates = produitPredicate(cb, root, storageId, query);
+        List<Predicate> predicates = produitPredicate(cb, root, magasinId, storageId, query);
         cq.where(cb.and(predicates.toArray(new Predicate[0])));
         TypedQuery<Long> q = em.createQuery(cq);
         Long v = q.getSingleResult();
         return v != null ? v : 0;
     }
 
-    private List<Predicate> produitPredicate(CriteriaBuilder cb, Root<Rayon> root, Long storageId, String query) {
+    private List<Predicate> produitPredicate(CriteriaBuilder cb, Root<Rayon> root, Long magasinId, Long storageId, String query) {
         List<Predicate> predicates = new ArrayList<>();
         if (StringUtils.hasLength(query)) {
             String search = query.toUpperCase() + "%";
             predicates.add(cb.or(cb.like(cb.upper(root.get(Rayon_.libelle)), search), cb.like(cb.upper(root.get(Rayon_.code)), search)));
         }
-        if (nonNull(storageId)) {
-            predicates.add(cb.equal(root.get(Rayon_.storage).get(Storage_.id), storageId));
-        }
+        if (isNull(storageId)) {
+            if (nonNull(magasinId)) {
+                storageId = storageService.findByMagasinIdAndStorageType(magasinId, StorageType.PRINCIPAL);
+            } else {
+                storageId = storageService.getDefaultConnectedUserMainStorage().getId();
+            }
 
+        }
+        predicates.add(cb.equal(root.get(Rayon_.storage).get(Storage_.id), storageId));
         return predicates;
     }
 
